@@ -1,3 +1,7 @@
+2008-10-13  Ernesto Baschny  <ernst@cron-it.de>
+
+	* Fixed issue #9533: Made substituteMarkerArrayCached not so strict. Still with type hinting, but also allowing the null (uninitialized var) to be passed (to prevent several older extensions from breaking).
+
 2008-10-10  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Added feature #7970: htmlARea RTE: fontstyle and fontsize should not use deprecated font tag
